--- a/Valuator/Valuator.csproj
+++ b/Valuator/Valuator.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Caches.Redis\Caches.Redis.csproj" />
+  </ItemGroup>
+
 </Project>
