feat: Для большей наглядности понизил минимальный уровень сообщения для логера, чтобы можно было видеть, куда отправился запрос

--- a/Valuator/appsettings.json
+++ b/Valuator/appsettings.json
@@ -1,13 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
     }
   },
   "AllowedHosts": "*",
-  "Redis": {
-    "HostName": null,
-    "Port": -1
-  }
+  "Redis": null
 }
