refactor: По-нормальному сделал инверсию зависимостей для NATS

--- a/MessageBus.Nats/MessageBus.Nats.csproj
+++ b/MessageBus.Nats/MessageBus.Nats.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
+      <ProjectReference Include="..\MessageBus.Interfaces\MessageBus.Interfaces.csproj" />
     </ItemGroup>
 
 </Project>
