--- a/Valuator/Valuator.csproj
+++ b/Valuator/Valuator.csproj
@@ -9,8 +9,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Caches.Redis\Caches.Redis.csproj" />
     <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
-    <ProjectReference Include="..\MessageBus\MessageBus.csproj" />
+    <ProjectReference Include="..\MessageBus.Nats\MessageBus.Nats.csproj" />
     <ProjectReference Include="..\Valuator.Caches\Valuator.Caches.csproj" />
+    <ProjectReference Include="..\Valuator.Messages\Valuator.Messages.csproj" />
   </ItemGroup>
 
 </Project>
