--- a/Valuator.EventsLogger/Valuator.EventsLogger.csproj
+++ b/Valuator.EventsLogger/Valuator.EventsLogger.csproj
@@ -1,23 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-      <PackageReference Include="NATS.Client" Version="1.1.5" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Caches.Redis\Caches.Redis.csproj" />
-      <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
       <ProjectReference Include="..\Infrastructure.Common\Infrastructure.Common.csproj" />
       <ProjectReference Include="..\MessageBus.Nats\MessageBus.Nats.csproj" />
       <ProjectReference Include="..\Valuator.Caches\Valuator.Caches.csproj" />
