--- a/Valuator/Valuator.csproj
+++ b/Valuator/Valuator.csproj
@@ -11,7 +11,7 @@
     <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
     <ProjectReference Include="..\MessageBus.Nats\MessageBus.Nats.csproj" />
     <ProjectReference Include="..\Valuator.Caches\Valuator.Caches.csproj" />
-    <ProjectReference Include="..\Valuator.Messages\Valuator.Messages.csproj" />
+    <ProjectReference Include="..\Valuator.MessageBus\Valuator.MessageBus.csproj" />
   </ItemGroup>
 
 </Project>
