feat: Добавил возможность для шардирования

--- a/Caches.Interfaces/Caches.Interfaces.csproj
+++ b/Caches.Interfaces/Caches.Interfaces.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Valuator.Domain\Valuator.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
