--- a/Valuator.Caches/Valuator.Caches.csproj
+++ b/Valuator.Caches/Valuator.Caches.csproj
@@ -9,6 +9,11 @@
     <ItemGroup>
       <ProjectReference Include="..\Caches.Interfaces\Caches.Interfaces.csproj" />
       <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
+      <ProjectReference Include="..\Valuator.Domain\Valuator.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
