--- a/Valuator/Properties/launchSettings.json
+++ b/Valuator/Properties/launchSettings.json
@@ -7,7 +7,10 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_RUS": "127.0.0.1:6379",
+        "DB_EU": "127.0.0.1:6379",
+        "DB_OTHER": "127.0.0.1:6379"
       }
     },
     "instance_2": {
@@ -16,7 +19,10 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_RUS": "127.0.0.1:6379",
+        "DB_EU": "127.0.0.1:6379",
+        "DB_OTHER": "127.0.0.1:6379"
       }
     }
   }
