--- a/Valuator.EventsLogger/Valuator.EventsLogger.csproj
+++ b/Valuator.EventsLogger/Valuator.EventsLogger.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Caches.Extensions\Caches.Extensions.csproj" />
       <ProjectReference Include="..\Caches.Redis\Caches.Redis.csproj" />
       <ProjectReference Include="..\Infrastructure.Common\Infrastructure.Common.csproj" />
       <ProjectReference Include="..\MessageBus.Nats\MessageBus.Nats.csproj" />
