--- a/Valuator.RankCalculator/Valuator.RankCalculator.csproj
+++ b/Valuator.RankCalculator/Valuator.RankCalculator.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Caches.Extensions\Caches.Extensions.csproj" />
       <ProjectReference Include="..\Caches.Redis\Caches.Redis.csproj" />
       <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
       <ProjectReference Include="..\Infrastructure.Common\Infrastructure.Common.csproj" />
