--- a/Valuator.Caches/Valuator.Caches.csproj
+++ b/Valuator.Caches/Valuator.Caches.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Caches.Extensions\Caches.Extensions.csproj" />
       <ProjectReference Include="..\Caches.Interfaces\Caches.Interfaces.csproj" />
       <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
       <ProjectReference Include="..\Valuator.Domain\Valuator.Domain.csproj" />
