--- a/Chat/Client/Client.csproj
+++ b/Chat/Client/Client.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Sockets\Sockets.csproj" />
+  </ItemGroup>
+
 </Project>
