--- a/Chat/Server/Server.csproj
+++ b/Chat/Server/Server.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Sockets\Sockets.csproj" />
+  </ItemGroup>
 
 </Project>
