--- a/Chat/Server/Server.csproj
+++ b/Chat/Server/Server.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Chatting.Commands\Chatting.Commands.csproj" />
+    <ProjectReference Include="..\..\Chat.Commands\Chat.Commands.csproj" />
     <ProjectReference Include="..\..\Sockets\Sockets.csproj" />
   </ItemGroup>
 
