--- a/Valuator.Repositories.Interfaces/Valuator.Repositories.Interfaces.csproj
+++ b/Valuator.Repositories.Interfaces/Valuator.Repositories.Interfaces.csproj
@@ -7,8 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Caches.Interfaces\Caches.Interfaces.csproj" />
-      <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
+      <ProjectReference Include="..\Valuator.Domain\Valuator.Domain.csproj" />
     </ItemGroup>
 
 </Project>
