--- a/Valuator.Repositories.Redis/Valuator.Repositories.Redis.csproj
+++ b/Valuator.Repositories.Redis/Valuator.Repositories.Redis.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Caches.Interfaces\Caches.Interfaces.csproj" />
+      <ProjectReference Include="..\Valuator.Repositories.Interfaces\Valuator.Repositories.Interfaces.csproj" />
     </ItemGroup>
 
 </Project>
