--- a/Valuator/Valuator.csproj
+++ b/Valuator/Valuator.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Caches.Redis\Caches.Redis.csproj" />
+    <ProjectReference Include="..\Valuator.Repositories.Redis\Valuator.Repositories.Redis.csproj" />
     <ProjectReference Include="..\FluentAssertions\FluentAssertions.csproj" />
     <ProjectReference Include="..\MessageBus.Nats\MessageBus.Nats.csproj" />
-    <ProjectReference Include="..\Valuator.Caches\Valuator.Caches.csproj" />
+    <ProjectReference Include="..\Valuator.Domain\Valuator.Domain.csproj" />
     <ProjectReference Include="..\Valuator.MessageBus\Valuator.MessageBus.csproj" />
   </ItemGroup>
 
