--- a/MessageBus.Nats/MessageBus.Nats.csproj
+++ b/MessageBus.Nats/MessageBus.Nats.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
       <PackageReference Include="NATS.Client" Version="1.1.5" />
     </ItemGroup>
 
